# Expozy-AI-Service

.github/workflows/: Deployment.yml  Development.yml  main.yml
Analysis/: Research (1).docx  Research.docx  System Requirements Specification.docx  Threat and Security Model for the EXPOZY AI Page Generator.docx  Use Cases Specification.docx
Design/: API_Contract_AI_Orchestrator (2).docx  Architectural document.docx
Implementation/: .gitignore  Dockerfile  ENV_VARS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Implementation/AIModel/: expozy_eval_results.json  expozy_schemaV1.json  old.py  test-result-1.text  test.py
Implementation/TelegramBOT/: Dockerfile  README.md  requirements.txt
Implementation/ValidationAI/: ajv_validate.mjs  batch_test.py  (+6 more)
Implementation/micro-service/: Dockerfile  ENV_VARS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
Implementation/micro-service/api/orchestrator/ai/providers/: expozy_schemaV2.json
Implementation/micro-service/api/orchestrator/db/: session.py
Implementation/micro-service/api/orchestrator/db/service/: queue.py
Implementation/micro-service/api/orchestrator/preview/rendering/: __init__.py  html_renderer.py
Implementation/micro-service/api/orchestrator/preview/service/: sanitizer.py  storage.py
Implementation/micro-service/api/orchestrator/worker/: main.py
Implementation/micro-service/api/telegram/: telegram_client.py
Implementation/micro-service/api/telegram/controller/: telegram_webhook.py
Implementation/micro-service/api/telegram/service/: telegram_service.py
Implementation/micro-service/shared/utils/: __init__.py  logging.py
Implementation/micro-service/tests/worker/: test_worker_behaviors.py
Sprints/: sprint1.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md
(+101 files in other folders)
