[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-orchestrator"
version = "1.0.0"
description = "Self-hosted AI Orchestrator for Telegram-driven webpage generation"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EXPOZY", email = "dev@expozy.com"}
]

dependencies = [
    # FastAPI and ASGI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "greenlet>=3.0.3",
    
    # Message Queue
    "aio-pika>=9.4.0",
    
    # HTTP Client
    "httpx>=0.26.0",
    
    # Validation and Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Security and Sanitization
    "bleach>=6.1.0",
    "python-jose[cryptography]>=3.3.0",
    
    # Utilities
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",  # For in-memory SQLite testing
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring docker-compose",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
